[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mimo-tts-toolkit"
version = "0.1.0"
description = "逆向并封装小米 MiMo v2.5 TTS API — 长文本分段、风格注入、WAV 合并"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "nagi"},
]
keywords = ["tts", "mimo", "xiaomi", "speech-synthesis", "voice", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]

dependencies = []

[project.optional-dependencies]
http = ["httpx>=0.24"]
dev = ["pytest>=7.0"]

[project.scripts]
mimo-tts = "mimo_tts.cli:main"

[project.urls]
Homepage = "https://github.com/nagi/mimo-tts-toolkit"
Repository = "https://github.com/nagi/mimo-tts-toolkit"

[tool.setuptools.packages.find]
include = ["mimo_tts*"]
